@@ -1,3 +1,10 @@
+Tue Apr 15 19:26:05 2014  Tanaka Akira  <akr@fsij.org>
+
+	* ext/extmk.rb: Re-generate extmk.mk and dummy makefiles only if
+	  really required.
+	  This fixes a problem to run multiple test-all concurrently as:
+	  make test-all & make test-all & make test-all & ...
+
 Tue Apr 15 12:49:53 2014  Sam Rawlins  <sam.rawlins@gmail.com>
 
 	* enum.c (enum_each_slice, enum_each_cons): make more efficient by
